# A_Maze_ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  pyproject.toml  requirements.txt  setup.cfg
a_maze_ing/: __init__.py  __main__.py  config_parser.py  interactive.py  visualizer.py
mazegen/: __init__.py  formatter.py  generator.py  patterns.py  solver.py
tests/: __init__.py  test_config_parser.py  test_formatter.py  test_generator.py  test_solver.py
