[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A reusable maze generator module"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["flake8", "mypy", "pytest"]

[tool.setuptools.packages.find]
include = ["mazegen*"]
